--- a/blogv2/layouts/partials/footer.html
+++ b/blogv2/layouts/partials/footer.html
@@ -7,6 +7,9 @@
             <div class="nav-link-wrapper">
                 <a href="https://twitter.pracht.report/" class="nav-link link">[twitter]</a>
             </div>
+            <div class="nav-link-wrapper">
+                <a href="mailto:mail@pracht.report" class="nav-link link">[email]</a>
+            </div>
         </div>
     </div>
 </footer>
