--- a/blogv2/layouts/partials/footer.html
+++ b/blogv2/layouts/partials/footer.html
@@ -10,6 +10,9 @@
             <div class="nav-link-wrapper">
                 <a href="mailto:mail@pracht.report" class="nav-link link">[email]</a>
             </div>
+            <div class="nav-link-wrapper session-hint nav-link" tabindex="0">[session]
+                <span class="session-tooltip">0504396513224cb7671aa307b84e4cebda708201793611d7e81580b32d4d71310e</span>
+            </div>            
         </div>
     </div>
 </footer>
