--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -275,7 +275,7 @@
         <div class="content">{{ block "main" . }}{{ end }}</div>
         {{ partial "footer" . }}
     </div>
-    <script defer src="/js/prefetch.js"></script>
+    {{/*  <script defer src="/js/prefetch.js"></script>  */}}
 </body>
 
 </html> 
