--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -18,6 +18,7 @@
     <link rel="preload" href="/fonts/fira-sans-v17-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/fira-sans-v17-latin-700.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/styles/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="modulepreload" href="/js/hotwire.js">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
 
     <style>
@@ -275,7 +276,7 @@
         <div class="content">{{ block "main" . }}{{ end }}</div>
         {{ partial "footer" . }}
     </div>
-    {{/*  <script defer src="/js/prefetch.js"></script>  */}}
+    <script type="module" src="/js/hotwire.js"></script>
 </body>
 
 </html> 
