--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -37,7 +37,7 @@
             font-style: normal;
             font-weight: 500;
             src: url('/fonts/fira-mono-v14-latin-500.woff2') format('woff2');
-            font-display: swap
+            /*  font-display: swap  */
         }
 
         @font-face {
@@ -45,7 +45,7 @@
             font-style: normal;
             font-weight: 400;
             src: url('/fonts/fira-sans-v17-latin-regular.woff2') format('woff2');
-            font-display: swap
+            /*  font-display: swap  */
         }
 
         @font-face {
@@ -53,7 +53,7 @@
             font-style: normal;
             font-weight: 700;
             src: url('/fonts/fira-sans-v17-latin-700.woff2') format('woff2');
-            font-display: swap
+            /*  font-display: swap  */
         }
 
         *,
