--- a/blogv2/layouts/partials/navbar.html
+++ b/blogv2/layouts/partials/navbar.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="navbar-date-container">
-            <img src="/globe.gif" alt="a rotation globe" data-nimg="1" style="mix-blend-mode: multiply;" height="14"
+            <img src="/media/gifs/globe.gif" alt="a rotation globe" data-nimg="1" style="mix-blend-mode: multiply;" height="14"
                 width="14" loading="lazy">
             {{ time.Now | time.Format "02.01.2006"}}
         </div>
