--- a/blogv2/layouts/_default/baseof.html
+++ b/blogv2/layouts/_default/baseof.html
@@ -318,6 +318,16 @@
             margin-bottom: 0px;
         }
 
+        .article-content hr {
+            border: 0;
+            border-top: 1px solid var(--color-on-background);
+            margin-bottom: 5px;
+        }
+
+        .article-content h3 {
+            font-size: 16px;
+        }
+
         .article-id {
             font-size: 12px;
         }
