--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -313,11 +313,11 @@
             border: 0;
             border-top: 1px solid var(--color-on-background);
             margin-bottom: 5px;
-            text-transform: uppercase
         }
 
         .article-content h3 {
             font-size: 16px;
+            text-transform: uppercase;
         }
 
         .article-id {
