--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -316,6 +316,7 @@
         }
 
         .article-content h3 {
+            margin-top: 25px;
             font-size: 16px;
             text-transform: uppercase;
         }
