--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -316,9 +316,10 @@
         }
 
         .article-content h3 {
-            margin-top: 20px;
-            font-size: 16px;
+            margin-top: 12.5px;
+            font-size: 14px;
             text-transform: uppercase;
+            font-weight: 700;
         }
 
         .article-id {
